--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1> MONSTER HIGH...</h1>
-    CLEO
-    <p> Aqui estou mostrando com será a rotina da semana do dia 26/02 até 01/03</p>
+
+    <p> Aqui estou mostrando alguns episódios de barbie</p>
     
     
     <img src="monster high.png" alt="logo do Newton">
