--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title></title>
 </head>
 <body>
-    <h1> MONSTER HIGH...</h1>
+    <h1> BARBIE...</h1>
 
     <p> Aqui estou mostrando alguns episódios de barbie</p>
     
     
-    <img src="monster high.png" alt="logo do Newton">
+    <img src="Barbielogo.png" alt="logo do Newton">
     <img src="NEWTON2.jpg" alt="foto do Newton"> 
     <img src="BARAO1.png" alt="logo do barão">
     <img src="BARAO2.jpg" alt="foto do Barão">
